--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,7 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Jash Shah'
+  github_nickname: 'logicisaliar'
+- name: 'Joti Sempe'
+  github_nickname: 'jotisempe'
+- name: 'Maria Lucanera'
+  github_nickname: 'mllucanera'
+
